--- a/views/streaming.ejs
+++ b/views/streaming.ejs
@@ -27,7 +27,7 @@
             Essential Playlists: Official Drake playlists like This Is Drake (Spotify), Essentials (Apple Music), and fan-curated collections
             🚀 Maximize Your Streaming Experience</p>
             
-           <P> When streaming overnight, ensure your sound is not muted (headphones are ok, on your lowest volume setting, but not muted). <br>2. Ensure you are mixing in other artists and songs. Spotify has a much greater chance of flagging your streams as fake streams if you’re listening to the same artist or song over and over again. For every 2-3 Drake songs, you should mix in a song by another artist. Use multiple artists in playlists, known and unknown, for best results.</P>
+           <P> 1. When streaming overnight, ensure your sound is not muted (headphones are ok, on your lowest volume setting, but not muted). <br>2. Ensure you are mixing in other artists and songs. Spotify has a much greater chance of flagging your streams as fake streams if you’re listening to the same artist or song over and over again. For every 2-3 Drake songs, you should mix in a song by another artist. Use multiple artists in playlists, known and unknown, for best results.</P>
            <p>
             3. Do not shuffle the playlist. Shuffling can lead to repeated artist and songs being spammed. 
             4. Once your playlist has cycled through, play a few songs directly off your liked songs or off an artist page, before looping the playlist. 
@@ -52,17 +52,17 @@
 
     <div class="kelz-images">
         <div class="kelz-1">
-            <img class="kelz-2" src="/img/e1.jpeg">
+            <img class="kelz-2" src="/img/e1.jpeg" alt="most streamed artist spotify">
  
          </div>
          <div class="kelz-1">
-             <img class="kelz-2" src="/img/e2.jpeg">
+             <img class="kelz-2" src="/img/e2.jpeg" alt="most streamed rapper">
          </div>
          <div class="kelz-1">
-             <img class="kelz-2" src="/img/e3.jpeg">
+             <img class="kelz-2" src="/img/e3.jpeg" alt="drake fan site">
          </div>
          <div class="kelz-1">
-             <img class="kelz-2" src="/img/e4.jpeg">
+             <img class="kelz-2" src="/img/e4.jpeg" alt="most streamed apple music">
          </div>
         </div>
         
