--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -1,10 +1,10 @@
 <div class="carousel">
     <div class="carousel-slide">
-        <img src="/img/d1.jfif" alt="Slide 1">
+        <img src="/img/d1.jfif" alt="God's plan">
     </div>
     
     <div class="carousel-slide">
-        <img src="/img/a1.jpg" alt="Slide 3">
+        <img src="/img/a1.jpg" alt="one dance">
     </div>
   </div>
   
