--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,6 +8,14 @@
       2024 | WEBDESIGN BY <span style="color: #ffffff; font-weight: bold;">Kelz</span>
   </p>
 
+  <p>
+    Follow DrakeChart on twitter for charts infos 
+    <a href="https://x.com/drakechart?s=11&t=S67jMGPCedxDKXURCnPA2w" target="_blank">
+        <img src="https://abs.twimg.com/favicons/twitter.2.ico" alt="Twitter Logo" style="width:24px; height:24px;">
+      </a>
+  </p>
+  
+
   <div style="text-align: center; font-size: 12px; color: #a0a0a0; margin-bottom: 10px;">
       <p>
           Image Credit: 
