--- a/views/records/records.ejs
+++ b/views/records/records.ejs
@@ -19,12 +19,35 @@
 
         <div class="record-2nd">
             <div class="record-2ndpic">
-                <img src="/img/a4.JPG" alt="">
+                <img src="/img/a4.JPG" alt="ovo">
             </div>
             <div class="record-2ndpic">
-                <img src="/img/a7.JPG" alt="">
+                <img src="/img/a7.JPG" alt="drake spotify record">
             </div>
         </div>
+
+
+        <section class="hero-rec">
+          <!-- Example central image (replace with your own) -->
+          <img class="hero-img" src="/img/e1.JPeG" alt="Drake fan website" />
+      
+          <h1 class="hero-heading">
+            <span>Most</span>
+            <span>Streamed</span>
+            <span>Artist in</span>
+            <span>History</span>
+          </h1>
+      
+         
+      
+          <!-- Wave at the bottom -->
+          <div class="wave-container-rec">
+            <!-- You can change the path fill to any shape or color you like -->
+            <svg viewBox="0 0 500 150" preserveAspectRatio="none">
+              <path class="wave" d="M0.00,49.98 C150.00,150.00 349.98,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path>
+            </svg>
+          </div>
+        </section>
 
         
 
