--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 
     <section class="hero">
       <!-- Example central image (replace with your own) -->
-      <img class="hero-img" src="/img/e2.JPeG" alt="Drake fan website" />
+      <img class="hero-img" src="/img/e2.jpeg" alt="Drake fan website" />
   
       <h1 class="hero-heading">
         <span>Drake</span>
