--- a/views/records/records.ejs
+++ b/views/records/records.ejs
@@ -29,7 +29,7 @@
 
         <section class="hero-rec">
           <!-- Example central image (replace with your own) -->
-          <img class="hero-img" src="/img/e1.JPEG" alt="Drake fan website" />
+          <img class="hero-img" src="/img/e1.jpeg" alt="Drake fan website" />
       
           <h1 class="hero-heading">
             <span>Most</span>
